--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <style> 
    .footer {
     background-color: #333;
-    color: #fff;
+    color: black;
     padding: 20px 0; 
     font-size: 14px; 
 }
@@ -35,12 +35,12 @@
 .footer-section h3 {
     font-size: 16px;
     margin-bottom: 10px;
-    color: #f8f8f8;
+    color: black;
 }
 
 .footer-section p,
 .footer-section a {
-    color: #ddd;
+    color: black;
     margin: 5px 0;
     text-decoration: none;
     transition: color 0.3s;
@@ -53,7 +53,7 @@
 .social-icon {
     display: inline-block;
     margin: 0 5px;
-    color: #ddd;
+    color: black;
     font-size: 18px;
 }
 
