--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="./images/bloodcommunity.jpg" class="logo">
+        <img src="./images/logo1.png" class="logo">
+            
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">about us</a></li>
