--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@ nav ul li a {
             <label for="pass2">Confirm Password:</label>
             <input type="password" id="pass2" name="pass2" required>
             
-            <button type="submit">Register</button>
+            <a href="donate.html"><button type="submit">Register</button></a>
         </form>
     </div>
 </body>
