--- a/request.html
+++ b/request.html
@@ -111,8 +111,17 @@
                 <option value="O-">O-</option>
             </select>
             
-            <label for="province">Province:</label>
-            <input type="text" id="province" name="province" required>
+            <label for="province">Select Province:</label>
+            <select id="province" name="province" required>
+                <option value="" disabled selected>Select province:</option>
+                <option value="province1">Koshi province</option>
+                <option value="province2">Madhesh province</option>
+                <option value="province3">Bagmati province</option>
+                <option value="province4">Gandaki province</option>
+                <option value="province5">Lumbini province</option>
+                <option value="province6">Karnali province</option>
+                <option value="province7">Sudurpashchim province</option>
+            </select>
             
             <label for="city">City:</label>
             <input type="text" id="city" name="city" required>
